<resources>
    <string name="app_name">Sudoku Puzzle</string>
    <string name="new_text">New</string>
    <string name="reset">Reset</string>
    <string name="solve">Solve</string>
    <string name="select">Select</string>
    <string name="done">Done</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
